index: description and keyword added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <meta charset='utf-8'>
+    <title>Smileyenterprise.com | Smiley Enterprise Business Host</title>
+    <meta name="description" content="All types of woven bag and Handcraft stiched fashionable bags manufacturer, variety of color and zise bags available here. Non woven carry bags,  on woven fabric, Non woven D-cut carry bag and U-cut carry bag, Non woven bag printing, Visiting card, Leaflets, sticker, paper printing and flex printing. ">
+    <meta name="keywords" content="Non woven carry bags, handle carry bag, D-cut carry bag and U-cut carry bag, Rairakhol, Sambalpur, Orissa, India ,s 768106, Phone: +91-9853774433, +91-9777831133 ">
+    <meta name="author" content="Smiley Enterprise">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
@@ -13,7 +17,6 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Smileyenterprise.com | Smiley Enterprise Business Host</title>
 </head>
 
 <body>
@@ -27,7 +30,7 @@
 <div id="content-wrapper">
     <div class="inner clearfix">
         <section id="main-content">
-            <h3>Non woven bang and Handcraft stiched fashionable bags manufacturer</h3>
+            <h3>All types of woven bag and Handcraft stiched fashionable bags manufacturer</h3>
             <h4>Products :</h4>
             <ul>
                 <li>Non woven carry bags</li>
