--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li>Non woven carry bags</li>
                 <li>Handcraft stiched fashionable bags</li>
                 <li>Non woven fabric</li>
-                <li>Non handle carry bag</li>
+                <li>Non woven handle carry bag</li>
                 <li>Non woven D-cut carry bag and U-cut carry bag</li>
                 <li>Non woven bag printing</li>
                 <li>Visiting card, Leaflets, sticker, paper printing and flex printing</li>
