Smiley Enterprise added on the theme title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sedulous - Best Free Bootstrap Template</title>
+  <title>Smiley Enterprise - Best Fabric, Non-woven bag and Identity Card designer and manufacturer</title>
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
@@ -24,8 +24,8 @@
     <div class="col-md-12 line">
         <div class="tablebox">
         <div class="banner-text" id="bannertext">
-            <h1 class="hostyle" id="heads">Sedulous</h1>
-            <p class="pstyle">We are Creative</p>
+            <h1 class="hostyle" id="heads">Smiley Enterprise</h1>
+            <p class="pstyle"><br/><br/>We are Creative</p>
             <a href="#features" class="page-scroll arrow"><i class="fa fa-angle-down"></i></a> 
           </div>
       </div>
@@ -38,13 +38,13 @@
     	<button type="button" class="navbar-toggle menu-button" data-toggle="collapse" data-target="#myNavbar">
 			<span class="glyphicon glyphicon-align-justify"></span>
 		 </button>
-    <a class="navbar-brand logo" href="#">Sedulous</a> 
+    <a class="navbar-brand logo" href="#">Smiley Enterprise</a>
     </div>
     <div>
     	<nav class="collapse navbar-collapse" id="myNavbar" role="navigation">
         <ul class="nav navbar-nav navbar-right navstyle">
         <li><a href="#banner" class="page-scroll active">Home</a></li>
-        <li><a href="#features" class="page-scroll">Features</a></li>
+        <li><a href="#works" class="page-scroll">Works</a></li>
         <li><a href="#gallery" class="page-scroll">Gallery</a></li>
         <li><a href="#about" class="page-scroll">About</a></li>
         <li><a href="#testimonials" class="page-scroll">Testimonials</a></li>
