--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
                         <p class="pstyle"><br/><br/>We are Creative</p>
 
-                        <p style="color:#aaaaaa">we are specialized in manufacturing, supplying and exporting non-woven
+                        <p style="color:#aaaaaa">We are specialized in manufacturing, supplying and exporting non-woven
                             bags (D-cut, U-cut), Non-woven handle bags, Fabrics, ID Card, Flex Banners, Business Card
                             and Accessories.</p>
-                        <a href="#features" class="page-scroll arrow"><i class="fa fa-angle-down"></i></a>
+                        <a href="#work" class="page-scroll arrow"><i class="fa fa-angle-down"></i></a>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
-                    <div class="feature-icons"><img src="images/idea.png"/></div>
+                    <div class="feature-icons"><img src="/images/d-cut--bags-80x80.jpg"/></div>
                     <div class="fh-desc">
                         <h3>D-cut Bags</h3>
 
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
-                    <div class="feature-icons"><img src="images/time.png"/></div>
+                    <div class="feature-icons"><img src="/images/u-cut-bags-80x80.jpg"/></div>
                     <div class="fh-desc">
                         <h3>U-cut bags</h3>
 
@@ -105,9 +105,9 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
-                    <div class="feature-icons"><img src="images/money.png"/></div>
+                    <div class="feature-icons"><img src="/images/handle-bags-80x80.jpg"/></div>
                     <div class="fh-desc">
-                        <h3>Handle stitched bags</h3>
+                        <h3>Handle stitched carry bags</h3>
 
                         <p>Customer attraction towards our handle stitched bags improves the productivity.
                             We have different combination of designs and quality of bags. These types of bags
@@ -115,7 +115,23 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
-                    <div class="feature-icons"><img src="images/support.png"/></div>
+                    <div class="feature-icons"><img src="/images/digital-pringing-80x80.jpg"/></div>
+                    <div class="fh-desc">
+                        <h3>Non-woven digital printing</h3>
+
+                        <p>We also do offset printing in a effordable price.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
+                    <div class="feature-icons"><img src="/images/screen-printing-80x80.png"/></div>
+                    <div class="fh-desc">
+                        <h3>Non-woven screen printing</h3>
+
+                        <p>Screen printing for non-woven bags is our another service for small scale requirement</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
+                    <div class="feature-icons"><img src="/images/i-card-80x80.jpg"/></div>
                     <div class="fh-desc">
                         <h3>ID-Card and accessories supply</h3>
 
@@ -123,27 +139,11 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
-                    <div class="feature-icons"><img src="images/support.png"/></div>
+                    <div class="feature-icons"><img src="/images/social-business-card-f.jpg"/></div>
                     <div class="fh-desc">
                         <h3>Business card</h3>
 
                         <p>We design and supply different typs and quality of bossiness cards</p>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
-                    <div class="feature-icons"><img src="images/support.png"/></div>
-                    <div class="fh-desc">
-                        <h3>Non-woven offset printing</h3>
-
-                        <p>We also do offset printing in a effordable price.</p>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
-                    <div class="feature-icons"><img src="images/support.png"/></div>
-                    <div class="fh-desc">
-                        <h3>Non-woven screen printing</h3>
-
-                        <p>Screen printing for non-woven bags is our another service for small scale requirement</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
@@ -187,9 +187,9 @@
                     <div class="galleryimg" id="galleryimg">
                         <div class="grid mix category-2 col-md-4 col-sm-6 col-xs-6" data-myorder="1">
                             <figure class="effect-Beauty">
-                                <img src="images/unsplash004.jpg" alt="img13"/>
+                                <img src="images/nature.jpg" alt="img13"/>
                                 <figcaption>
-                                    <h2>Glowing <span>Sun<span></h2>
+                                    <h2>D <span>Cut<span></h2>
 
                                     <p>Beauty did not need any help. Everybody knew that.</p>
                                     <a href="#">View more</a>
@@ -293,13 +293,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9 col-sm-10 col-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam a suscipit nisl. Etiam a facilisis
-                        ante.
-                        Sed turpis felis, sagittis at risus ut, luctus feugiat ipsum. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit. Nam a suscipit nisl. Etiam a facilisis ante.</p>
+                    <h2>+91-9853774433</h2>
                 </div>
                 <div class="col-md-3 col-sm-2 col-xs-12 text-center">
-                    <button>Click Me</button>
+                    <button>Contact Me</button>
                 </div>
             </div>
         </div>
@@ -315,11 +312,9 @@
                             <h2>About Us</h2>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam a suscipit
-                                nisl.
-                                Etiam a facilisis ante. Sed turpis felis, sagittis at risus ut, luctus feugiat ipsum.
-                                Lorem
-                                ipsum dolor sit amet.</p>
+                            <p class="desc">We are specialized in manufacturing, supplying and exporting non-woven
+                                bags (D-cut, U-cut), Non-woven handle bags, Fabrics, ID Card, Flex Banners, Business Card
+                                and Accessories.</p>
                         </div>
                     </div>
                 </div>
@@ -330,48 +325,20 @@
                                 <div class="counter-item">
                                     <h5>Our Clients</h5>
 
-                                    <div class="timer" data-from="0" data-to="55" data-speed="5000"
+                                    <div class="timer" data-from="0" data-to="700" data-speed="5000"
                                          data-refresh-interval="50"></div>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-6">
                                 <div class="counter-item">
-                                    <h5>Projects completed</h5>
+                                    <h5>Products</h5>
 
-                                    <div class="timer" data-from="0" data-to="88" data-speed="5000"
+                                    <div class="timer" data-from="0" data-to="21" data-speed="5000"
                                          data-refresh-interval="50"></div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                            <div class="progresstitle">
-                                <h5>HTML5</h5>
 
-                                <div class="progress progress-style">
-                                    <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="80"
-                                         aria-valuemin="0" aria-valuemax="100" style="width:80%"> 80%
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="progresstitle">
-                                <h5>CSS3</h5>
-
-                                <div class="progress progress-style">
-                                    <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="74"
-                                         aria-valuemin="0" aria-valuemax="100" style="width:74%"> 74%
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="progresstitle">
-                                <h5>JQuery</h5>
-
-                                <div class="progress progress-style">
-                                    <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="65"
-                                         aria-valuemin="0" aria-valuemax="100" style="width:65%"> 65%
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -395,11 +362,10 @@
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="quotes">
                         <blockquote>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus bibendum augue sodales
-                                tellus molestie eleifend. Morbi felis sem, fermentum quis tincidunt eu, sollicitudin ut
-                                metus</p>
+                            <p>Our company always available the products for customers on exact time-period as commit with the customers.
+                            Our product is always best in quality </p>
 
-                            <p class="name">Yogesh Singh (Gujarat, India)</p>
+                            <p class="name">Paramananda Pradhan (Odisha, India)</p>
                         </blockquote>
                         <blockquote>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus bibendum augue sodales
