Updated index page

--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                     <div class="fh-desc">
                         <h3>ID-Card and accessories supply</h3>
 
-                        <p>We are making and supplying Identity cards and accessories to the schools and organizations.</p>
+                        <p>We are making and supplying Identity cards and accessories to the schools and
+                            organizations.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
@@ -168,11 +169,13 @@
                             <h2>Gallery</h2>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-12">
+                            <!--
                             <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam a suscipit
                                 nisl.
                                 Etiam a facilisis ante. Sed turpis felis, sagittis at risus ut, luctus feugiat ipsum.
                                 Lorem
                                 ipsum dolor sit amet.</p>
+                                -->
                         </div>
                     </div>
                 </div>
@@ -293,10 +296,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9 col-sm-10 col-12">
-                    <h2>+91-9853774433</h2>
+                    <h2 style="color:white;"><i class="fa fa-phone-square"></i> : +91-9853774433</h2>
                 </div>
                 <div class="col-md-3 col-sm-2 col-xs-12 text-center">
-                    <button>Contact Me</button>
+                    <a href="#contact">
+                        <button>Contact Me</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -313,7 +318,8 @@
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <p class="desc">We are specialized in manufacturing, supplying and exporting non-woven
-                                bags (D-cut, U-cut), Non-woven handle bags, Fabrics, ID Card, Flex Banners, Business Card
+                                bags (D-cut, U-cut), Non-woven handle bags, Fabrics, ID Card, Flex Banners, Business
+                                Card
                                 and Accessories.</p>
                         </div>
                     </div>
@@ -362,8 +368,9 @@
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="quotes">
                         <blockquote>
-                            <p>Our company always available the products for customers on exact time-period as commit with the customers.
-                            Our product is always best in quality </p>
+                            <p>Our company always available the products for customers on exact time-period as commit
+                                with the customers.
+                                Our product is always best in quality </p>
 
                             <p class="name">Paramananda Pradhan (Odisha, India)</p>
                         </blockquote>
@@ -425,9 +432,11 @@
 
                         <p>PIN : 768106</p>
 
-                        <p>Tel No : +91-9853774433</p>
+                        <p><i class="fa fa-phone"></i> : +91-9853774433 </p>
 
-                        <p>Alt No : +91-9777831133</p>
+                        <p><i class="fa fa-whatsapp"></i> : +91-9853774433 </p>
+
+                        <p><i class="fa fa-mobile"></i> : +91-9777831133</p>
 
                         <p>Email : sales.smileyenterprise@gmail.com</p>
                     </div>
