gallery images added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 
                         <p style="color:#aaaaaa">We are specialized in manufacturing, supplying and exporting non-woven
                             bags (D-cut, U-cut), Non-woven handle bags, Fabrics, ID Card, Flex Banners, Business Card
-                            and Accessories.</p>
+                            and Accessories.</p><br>
+                        <p class="pstyle">
+                            Mob.No: +919853774433
+                        </p>
                         <a href="#work" class="page-scroll arrow"><i class="fa fa-angle-down"></i></a>
                     </div>
                 </div>
@@ -182,74 +185,78 @@
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="sorting pull-left">
                         <div class="filter pull-left filimg" data-filter="all">Show All</div>
-                        <div class="filter pull-left filimg" data-filter=".category-1">Beautiful</div>
-                        <div class="filter pull-left filimg" data-filter=".category-2">Amazing</div>
+                        <div class="filter pull-left filimg" data-filter=".category-1">D-CUT</div>
+                        <div class="filter pull-left filimg" data-filter=".category-2">U-CUT</div>
+                        <div class="filter pull-left filimg" data-filter=".category-3">HANDLE-STITCH</div>
+                        <div class="filter pull-left filimg" data-filter=".category-4">ID-CARD</div>
                     </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="galleryimg" id="galleryimg">
-                        <div class="grid mix category-2 col-md-4 col-sm-6 col-xs-6" data-myorder="1">
+                        <div class="grid mix category-1 col-md-4 col-sm-6 col-xs-6" data-myorder="1">
                             <figure class="effect-Beauty">
-                                <img src="images/nature.jpg" alt="img13"/>
+                                <img src="images/D-CUT-500x400.png" alt="img13"/>
                                 <figcaption>
-                                    <h2>D <span>Cut<span></h2>
+                                    <h2>D-CUT <span> BAG</span></h2>
 
-                                    <p>Beauty did not need any help. Everybody knew that.</p>
+
+                                    <!-- <p>Beauty did not need any help. Everybody knew that.</p>-->
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
                         </div>
                         <div class="grid mix category-1 col-md-4 col-sm-6 col-xs-6" data-myorder="2">
                             <figure class="effect-Beauty">
-                                <img src="images/unsplash009.jpg" alt="img13"/>
+                                <img src="images/d-cut-printed bag-500x400.jpg" alt="img13"/>
                                 <figcaption>
-                                    <h2>High <span>Sky</span></h2>
+                                    <h2>D-CUT DIGITAL PRINTED <span>BAG</span></h2>
 
-                                    <p>Beauty did not need any help. Everybody knew that.</p>
+
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
                         </div>
-                        <div class="grid mix category-1 col-md-4 col-sm-6 col-xs-6" data-myorder="3">
+                        <div class="grid mix category-3 col-md-4 col-sm-6 col-xs-6" data-myorder="3">
                             <figure class="effect-Beauty">
-                                <img src="images/unsplash0010.jpg" alt="img13"/>
+                                <img src="images/HANDLE-STITCHED-bag-500x400.jpg" alt="img13"/>
                                 <figcaption>
-                                    <h2>Darkest <span>Rain</span></h2>
+                                    <h2>HANDLE<span>STITCH  BAG <span></h2>
 
-                                    <p>Beauty did not need any help. Everybody knew that.</p>
+
+                                    <!--  <p>Beauty did not need any help. Everybody knew that.</p>-->
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
                         </div>
-                        <div class="grid mix category-2 col-md-4 col-sm-6 col-xs-6" data-myorder="4">
+                        <div class="grid mix category-4 col-md-4 col-sm-6 col-xs-6" data-myorder="4">
                             <figure class="effect-Beauty">
-                                <img src="images/unsplash002.jpg" alt="img13"/>
+                                <img src="images/ID-CARD-500x400.png" alt="img13"/>
                                 <figcaption>
-                                    <h2>Beautiful <span>Heart</span></h2>
+                                    <h2>ID <span>  CARD</span></h2>
 
-                                    <p>Beauty did not need any help. Everybody knew that.</p>
+                                    <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
                         </div>
-                        <div class="grid mix category-2 col-md-4 col-sm-6 col-xs-6" data-myorder="5">
+                        <div class="grid mix category-4 col-md-4 col-sm-6 col-xs-6" data-myorder="5">
                             <figure class="effect-Beauty">
-                                <img src="images/unsplash006.jpg" alt="img13"/>
+                                <img src="images/ID-CARD2-500x400.png" alt="img13"/>
                                 <figcaption>
-                                    <h2>Cute <span>Imagine</span></h2>
+                                    <h2>ID-CARD <span>TYPES</span></h2>
 
-                                    <p>Beauty did not need any help. Everybody knew that.</p>
+                                    <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
                         </div>
                         <div class="grid mix category-1 col-md-4 col-sm-6 col-xs-6" data-myorder="6">
                             <figure class="effect-Beauty">
-                                <img src="images/unsplash004.jpg" alt="img13"/>
+                                <img src="images/d-cut-screenprint-500x400.png" alt="img13"/>
                                 <figcaption>
-                                    <h2>Glowing <span>Sun</span></h2>
+                                    <h2>D-CUT SCREEN <span>PRINTED BAG</span></h2>
 
-                                    <p>Beauty did not need any help. Everybody knew that.</p>
+                                    <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
@@ -260,7 +267,7 @@
                                 <figcaption>
                                     <h2>Darkest <span>Rain</span></h2>
 
-                                    <p>Beauty did not need any help. Everybody knew that.</p>
+                                    <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
@@ -271,7 +278,7 @@
                                 <figcaption>
                                     <h2>Beautiful <span>Heart</span></h2>
 
-                                    <p>Beauty did not need any help. Everybody knew that.</p>
+                                    <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
@@ -282,7 +289,7 @@
                                 <figcaption>
                                     <h2>Glowing <span>Sun</span></h2>
 
-                                    <p>Beauty did not need any help. Everybody knew that.</p>
+                                    <!-- <p>Beauty did not need any help. Everybody knew that.</p>-->
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
@@ -368,17 +375,20 @@
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="quotes">
                         <blockquote>
-                            <p>Our company always available the products for customers on exact time-period as commit
-                                with the customers.
-                                Our product is always best in quality </p>
+                            <p>
+                                Your product is best in quality. Exact delivery time. </p>
 
                             <p class="name">Paramananda Pradhan (Odisha, India)</p>
                         </blockquote>
                         <blockquote>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus bibendum augue sodales
-                                tellus molestie eleifend.</p>
+                            <p>Material quality and stitching is best than others</p>
 
-                            <p class="name">Michal Jordan (New York, USA)</p>
+                            <p class="name">Rajib Agarwal(Sambalpur, Odisha)</p>
+                        </blockquote>
+                        <blockquote>
+                            <p>Very beautiful design and material is good.</p>
+
+                            <p class="name">Dillip Sahoo(Boudh, Odisha)</p>
                         </blockquote>
                     </div>
                 </div>
