Gallery and testimonials changed

--- a/index.html
+++ b/index.html
@@ -191,11 +191,13 @@
                         <div class="filter pull-left filimg" data-filter=".category-4">ID-CARD</div>
                     </div>
                 </div>
+
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="galleryimg" id="galleryimg">
+
                         <div class="grid mix category-1 col-md-4 col-sm-6 col-xs-6" data-myorder="1">
                             <figure class="effect-Beauty">
-                                <img src="images/D-CUT-500x400.png" alt="img13"/>
+                                <img src="images/d-cut-500x400.png" alt="img13"/>
                                 <figcaption>
                                     <h2>D-CUT <span> BAG</span></h2>
 
@@ -207,45 +209,11 @@
                         </div>
                         <div class="grid mix category-1 col-md-4 col-sm-6 col-xs-6" data-myorder="2">
                             <figure class="effect-Beauty">
-                                <img src="images/d-cut-printed bag-500x400.jpg" alt="img13"/>
+                                <img src="images/d-cut-all-size-500x400.jpg" alt="img13"/>
                                 <figcaption>
-                                    <h2>D-CUT DIGITAL PRINTED <span>BAG</span></h2>
+                                    <h2>D-CUT<span>BAG</span></h2>
 
 
-                                    <a href="#">View more</a>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <div class="grid mix category-3 col-md-4 col-sm-6 col-xs-6" data-myorder="3">
-                            <figure class="effect-Beauty">
-                                <img src="images/HANDLE-STITCHED-bag-500x400.jpg" alt="img13"/>
-                                <figcaption>
-                                    <h2>HANDLE<span>STITCH  BAG <span></h2>
-
-
-                                    <!--  <p>Beauty did not need any help. Everybody knew that.</p>-->
-                                    <a href="#">View more</a>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <div class="grid mix category-4 col-md-4 col-sm-6 col-xs-6" data-myorder="4">
-                            <figure class="effect-Beauty">
-                                <img src="images/ID-CARD-500x400.png" alt="img13"/>
-                                <figcaption>
-                                    <h2>ID <span>  CARD</span></h2>
-
-                                    <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
-                                    <a href="#">View more</a>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <div class="grid mix category-4 col-md-4 col-sm-6 col-xs-6" data-myorder="5">
-                            <figure class="effect-Beauty">
-                                <img src="images/ID-CARD2-500x400.png" alt="img13"/>
-                                <figcaption>
-                                    <h2>ID-CARD <span>TYPES</span></h2>
-
-                                    <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
@@ -261,39 +229,91 @@
                                 </figcaption>
                             </figure>
                         </div>
+
                         <div class="grid mix category-2 col-md-4 col-sm-6 col-xs-6" data-myorder="7">
                             <figure class="effect-Beauty">
-                                <img src="images/unsplash0010.jpg" alt="img13"/>
+                                <img src="images/u-cut-bags-500x400.jpg" alt="img13"/>
                                 <figcaption>
-                                    <h2>Darkest <span>Rain</span></h2>
+                                    <h2>U-CUT <span>BAG</span></h2>
 
                                     <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
                         </div>
-                        <div class="grid mix category-1 col-md-4 col-sm-6 col-xs-6" data-myorder="8">
+                        <div class="grid mix category-2 col-md-4 col-sm-6 col-xs-6" data-myorder="8">
                             <figure class="effect-Beauty">
-                                <img src="images/unsplash002.jpg" alt="img13"/>
+                                <img src="images/u-cut-bags-2-500x400.jpg" alt="img13"/>
                                 <figcaption>
-                                    <h2>Beautiful <span>Heart</span></h2>
+                                    <h2>U-CUT <span>BAG</span></h2>
 
                                     <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
                         </div>
-                        <div class="grid mix category-1 col-md-4 col-sm-6 col-xs-6" data-myorder="9">
-                            <figure class="effect-Beauty">
-                                <img src="images/unsplash004.jpg" alt="img13"/>
-                                <figcaption>
-                                    <h2>Glowing <span>Sun</span></h2>
 
-                                    <!-- <p>Beauty did not need any help. Everybody knew that.</p>-->
+                        <div class="grid mix category-3 col-md-4 col-sm-6 col-xs-6" data-myorder="3">
+                            <figure class="effect-Beauty">
+                                <img src="images/handle-carry-bag-1-500x400.jpg" alt="img13"/>
+                                <figcaption>
+                                    <h2>HANDLE<span>BAG</span></h2>
+
+
+                                    <!--  <p>Beauty did not need any help. Everybody knew that.</p>-->
                                     <a href="#">View more</a>
                                 </figcaption>
                             </figure>
                         </div>
+                        <div class="grid mix category-3 col-md-4 col-sm-6 col-xs-6" data-myorder="3">
+                            <figure class="effect-Beauty">
+                                <img src="images/handle-carry-bag-2-500x400.jpg" alt="img13"/>
+                                <figcaption>
+                                    <h2>HANDLE<span>BAG </span></h2>
+
+
+                                    <!--  <p>Beauty did not need any help. Everybody knew that.</p>-->
+                                    <a href="#">View more</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="grid mix category-3 col-md-4 col-sm-6 col-xs-6" data-myorder="3">
+                            <figure class="effect-Beauty">
+                                <img src="images/handle-carry-bag-3-500x400.jpg" alt="img13"/>
+                                <figcaption>
+                                    <h2>HANDLE<span>BAG </span></h2>
+
+
+                                    <!--  <p>Beauty did not need any help. Everybody knew that.</p>-->
+                                    <a href="#">View more</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+
+                        <div class="grid mix category-4 col-md-4 col-sm-6 col-xs-6" data-myorder="4">
+                            <figure class="effect-Beauty">
+                                <img src="images/id-card-500x400.png" alt="img13"/>
+                                <figcaption>
+                                    <h2>ID <span>  CARD</span></h2>
+
+                                    <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
+                                    <a href="#">View more</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="grid mix category-4 col-md-4 col-sm-6 col-xs-6" data-myorder="5">
+                            <figure class="effect-Beauty">
+                                <img src="images/id-cards-1-500x400.png" alt="img13"/>
+                                <figcaption>
+                                    <h2>ID-CARD <span>TYPES</span></h2>
+
+                                    <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
+                                    <a href="#">View more</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
@@ -378,7 +398,7 @@
                             <p>
                                 Your product is best in quality. Exact delivery time. </p>
 
-                            <p class="name">Paramananda Pradhan (Odisha, India)</p>
+                            <p class="name">Prakash Pradhan (Odisha, India)</p>
                         </blockquote>
                         <blockquote>
                             <p>Material quality and stitching is best than others</p>
@@ -389,6 +409,16 @@
                             <p>Very beautiful design and material is good.</p>
 
                             <p class="name">Dillip Sahoo(Boudh, Odisha)</p>
+                        </blockquote>
+                        <blockquote>
+                            <p>Products and printing are good, please place more verity of bags in your website.</p>
+
+                            <p class="name">Sudip (Bhubaneswar)</p>
+                        </blockquote>
+                        <blockquote>
+                            <p>Please place price list in your website</p>
+
+                            <p class="name">Kalia (Rairakhol)</p>
                         </blockquote>
                     </div>
                 </div>
