--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smiley Enterprise - Best Fabric, Non-woven bag and Identity Card designer and manufacturer</title>
+    <title>Smiley Enterprise - Best Fabric, Non-woven, Cotton, Jote bags Wholesaler and Distributer in Bhubaneswar, Odisha</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
@@ -38,9 +38,8 @@
 
                         <p class="pstyle"><br/><br/>We are Creative</p>
 
-                        <p style="color:#aaaaaa">We are specialized in manufacturing, supplying and exporting non-woven
-                            bags (D-cut, U-cut), Non-woven handle bags, Fabrics, ID Card, Flex Banners, Business Card
-                            and Accessories.</p><br>
+                        <p style="color:#aaaaaa">We are specialized in manufacturing, Whelesale, supplying and exporting non-woven
+                            bags (D-cut, U-cut), Non-woven handle bags, Shoping Bags, Cotton Bags, Jote Bags and Paper Bags in Bhubaneswar, Odisha.</p><br>
                         <p class="pstyle">
                             Mob.No: +919853774433
                         </p>
@@ -134,23 +133,6 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
-                    <div class="feature-icons"><img src="/images/i-card-80x80.jpg"/></div>
-                    <div class="fh-desc">
-                        <h3>ID-Card and accessories supply</h3>
-
-                        <p>We are making and supplying Identity cards and accessories to the schools and
-                            organizations.</p>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
-                    <div class="feature-icons"><img src="/images/social-business-card-f.jpg"/></div>
-                    <div class="fh-desc">
-                        <h3>Business card</h3>
-
-                        <p>We design and supply different typs and quality of bossiness cards</p>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12 featurebox">
                     <div class="feature-icons"><img src="images/support.png"/></div>
                     <div class="fh-desc">
                         <h3>Supply</h3>
@@ -188,7 +170,6 @@
                         <div class="filter pull-left filimg" data-filter=".category-1">D-CUT</div>
                         <div class="filter pull-left filimg" data-filter=".category-2">U-CUT</div>
                         <div class="filter pull-left filimg" data-filter=".category-3">HANDLE-STITCH</div>
-                        <div class="filter pull-left filimg" data-filter=".category-4">ID-CARD</div>
                     </div>
                 </div>
 
@@ -290,30 +271,6 @@
                             </figure>
                         </div>
 
-                        <div class="grid mix category-4 col-md-4 col-sm-6 col-xs-6" data-myorder="4">
-                            <figure class="effect-Beauty">
-                                <img src="images/id-card-500x400.png" alt="img13"/>
-                                <figcaption>
-                                    <h2>ID <span>  CARD</span></h2>
-
-                                    <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
-                                    <a href="#">View more</a>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <div class="grid mix category-4 col-md-4 col-sm-6 col-xs-6" data-myorder="5">
-                            <figure class="effect-Beauty">
-                                <img src="images/id-cards-1-500x400.png" alt="img13"/>
-                                <figcaption>
-                                    <h2>ID-CARD <span>TYPES</span></h2>
-
-                                    <!--<p>Beauty did not need any help. Everybody knew that.</p>-->
-                                    <a href="#">View more</a>
-                                </figcaption>
-                            </figure>
-                        </div>
-
-
                     </div>
                 </div>
             </div>
@@ -344,10 +301,8 @@
                             <h2>About Us</h2>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            <p class="desc">We are specialized in manufacturing, supplying and exporting non-woven
-                                bags (D-cut, U-cut), Non-woven handle bags, Fabrics, ID Card, Flex Banners, Business
-                                Card
-                                and Accessories.</p>
+                            <p class="desc">We are specialized in manufacturing, Whelesale, supplying and exporting non-woven
+                            bags (D-cut, U-cut), Non-woven handle bags, Shoping Bags, Cotton Bags, Jote Bags and Paper Bags in Bhubaneswar, Odisha.</p>
                         </div>
                     </div>
                 </div>
@@ -466,11 +421,11 @@
                         <h2>Contact</h2>
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12 centertext">
-                        <p>Rairakhol</p>
+                        <p>Plot No 893, New Colony, Palasuni, Rasulgarh</p>
 
-                        <p>Sambalpur, Orissa, INDIA</p>
+                        <p>Bhubaneswar, Bhubaneswar, Odisha, INDIA</p>
 
-                        <p>PIN : 768106</p>
+                        <p>PIN : 751010</p>
 
                         <p><i class="fa fa-phone"></i> : +91-9853774433 </p>
 
@@ -478,7 +433,7 @@
 
                         <p><i class="fa fa-mobile"></i> : +91-9777831133</p>
 
-                        <p>Email : sales.smileyenterprise@gmail.com</p>
+                        <p>Email : sales@smileyenterprise.com</p>
                     </div>
                 </div>
             </div>
