Map title added

--- a/index.html
+++ b/index.html
@@ -444,9 +444,11 @@
     </div>
 </div>
     
-<div class="container">
+<div class="container" style="padding-top:60px">
     <div class="row">
         <div class="col-md-12">
+            <!-- <div class="center-block"></div> -->
+            <h2> Map </h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14967.58452706966!2d85.865799!3d20.304566!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x752b0bf63781cb8c!2sSmiley+Enterprise+Non+Woven+Carry+Bags+Manufacturing%2FWhole+Saler%2C+Bhubaneswar+Odisha!5e0!3m2!1sen!2sin!4v1484193974304" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
     </div>
