Fixed more image issue

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                         
                         <div class="grid mix category-3 col-md-4 col-sm-6 col-xs-6" data-myorder="3">
                             <figure class="effect-Beauty">
-                                <!-- <img src="images/handle-carry-bag-3-500x400.jpg" alt="img13"/>-->
+                                <img src="images/more_image.png" alt="img13"/>
                                 <figcaption>
                                     <h2>MORE<span>IMAGES</span></h2>
 
